--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
+    "file-saver": "^2.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
